--- a/vignettes/install.Rmd
+++ b/vignettes/install.Rmd
@@ -27,45 +27,25 @@ knitr::opts_chunk$set(
 )
 ```
 
-## **Uninstall `tidyTools` and `metID`**
+# **Install `metpath` from GitLab**
 
-`tinyTools` has been renamed as `tinytools` and `metID` has been renamed as `metid`. So please uninstall them before you install `metpath`. **And don't use them any more.**
-
-1. detach them by:
+You can just use the `remotes` to install `metpath`. 
 
 ```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-detach("package:tinyTools")
-detach("package:metID")
+remotes::install_gitlab("jaspershen/metpath", dependencies = TRUE)
 ```
 
-2. Remove them by:
+During the installation, it will ask if you want to update some packages for few times, just enter `enter` key to skip it.
+
+# **Install `metpath` from GitHub**
+
+You can just use the `remotes` to install `metpath`. 
 
 ```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-remove.packages(pkgs = "tinyTools")
-remove.packages(pkgs = "metID")
+remotes::install_github("tidymass/metpath", dependencies = TRUE)
 ```
 
-3. Restart your R session. 
-
-> If there are errors, ignore them.
-
-## **Install metpath from github**
-
-You can just use the `devtools` or `remote` to install `metpath`. 
-
-Please update `devtools` first and then restart your r session.
-
-```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-install.packages("devtools")
-```
-
-Then install `metpath`:
-
-```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-devtools::install_github("metpath/metpath", dependencies = TRUE)
-```
-
-In the installation, it will ask if you want to update some packages for few times, just enter `enter` key to skip it.
+During the installation, it will ask if you want to update some packages for few times, just enter `enter` key to skip it.
 
 If there is a error like below:
 
@@ -101,26 +81,10 @@ GITHUB_PAT=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
 And then restart R session and try again.
 
 
-## **Install metpath packages one by one**
-
-If you use the windoes os and the dependencies can not be installed, try to install all the `metpath` packages one by one.
-
-```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-devtools::install_github("metpath/tinytools", dependencies = TRUE)
-devtools::install_github("metpath/massdataset", dependencies = TRUE)
-devtools::install_github("metpath/demodata", dependencies = TRUE)
-devtools::install_github("metpath/massqc", dependencies = TRUE)
-devtools::install_github("metpath/massprocesser", dependencies = TRUE)
-devtools::install_github("metpath/masscleaner", dependencies = TRUE)
-devtools::install_github("metpath/massstat", dependencies = TRUE)
-devtools::install_github("metpath/metid", dependencies = TRUE)
-devtools::install_github("metpath/metpath", dependencies = TRUE)
-```
-
 [Let me know if you have any questions](shenxt1990@outlook.com).
 
 
-## **Frequently Asked Questions**
+# **Frequently Asked Questions**
 
 1. Can not install dependent packages `raster` and `Cario`
 
@@ -137,7 +101,7 @@ install.packages("raster")
 install.packages("Cairo")
 ```
 
-## **Session information**
+# **Session information**
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
 sessionInfo()
