--- a/vignettes/install.Rmd
+++ b/vignettes/install.Rmd
@@ -32,7 +32,7 @@ knitr::opts_chunk$set(
 You can just use the `remotes` to install `metpath`. 
 
 ```{r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
-remotes::install_gitlab("jaspershen/metpath", dependencies = TRUE)
+remotes::install_gitlab("tidymass/metpath", dependencies = TRUE)
 ```
 
 During the installation, it will ask if you want to update some packages for few times, just enter `enter` key to skip it.
